--- a/git-course/010.git-init.md
+++ b/git-course/010.git-init.md
@@ -1,3 +1,2 @@
-# Git init
 
-Create your first (empty) git repository with `git init ~/demo`{{execute}}
+Utwórz pierwsze puste repozytorium `git init ~/demo`{{execute}}
