adding more scenarios

--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -1,2 +1,51 @@
+## Git status
 
-Utwórz pierwsze puste repozytorium `git init ~/demo`{{execute}}
+Step 2 - Git Status
+When a directory is part of a repository it is called a Working Directory. A working directory contains the latest downloaded version from the repository together with any changes that have yet to be committed. As you're working on a project, all changes are made in this working directory.
+
+You can view which files have changed between your working directory and what's been previously committed to the repository using the command `git status`{{execute}}
+
+The output of this command is called the "working tree status".
+
+Protip
+All files are "untracked" by Git until it's been told otherwise. The details of how is covered in the next step.
+
+## Git add
+
+Step 3 - Git Add
+To save, or commit, files into your Git repository you first need to add them to the staging area. Git has three areas, a working directory, a staging area and the repository itself. Users move, otherwise referred to as promote, changes from the working directory, to a staging area before committing them into the repository.
+
+One of the key approaches with Git is that commits are focused, small and frequent. The staging area helps to maintain this workflow by allowing you to only promote certain files at a time instead of all the changes in your working directory.
+
+Task
+Use the command `git add <file|directory>` to add hello-world.js to the staging area.
+
+If you make an additional change after adding a file to the staging area then the change will not be reflected until you add the file again.
+
+
+## Git Commit
+
+Once a file has been added to the staging area it needs to be committed to the repository. The command git commit -m "commit message" moves files from staging to the repository and records the time/date, author and a commit message that can be used to add additional context and reasoning to the changes such as a bug report number.
+
+Only changes added to the staging area will be committed, any files in the working directory that have not been staged will not be included.
+
+Task
+Use git commit -m "<commit message>" to commit the staged file.
+
+Protip
+Each commit is assigned a SHA-1 hash which enables you to refer back to the commit in other commands.
+
+
+## Git Ignore
+
+Sometimes there are particular files or directories you never want to commit, such as local development configuration. To ignore these files you create a .gitignore file in the root of the repository.
+
+The .gitignore file allows you to define wildcards for the files you wish to ignore, for example *.tmp will ignore all files with the extension .tmp.
+
+Any files matching a defined wildcard will not be displayed in a git status output and be ignored when attempting the git add command.
+
+Task
+Add and commit a .gitignore file to the repository to ignore all *.tmp files.
+
+Protip
+The .gitignore should be committed to the repository to ensure the rules apply across different machines.
