--- a/git-course/060.git-init.md
+++ b/git-course/060.git-init.md
@@ -1,2 +1,10 @@
+Git Revert
+To revert multiple commits at once we use the character ~ to mean minus. For example, HEAD~2 is two commits from the head. This can be combined with the characters ... to say between two commits.
 
-Utwórz pierwsze puste repozytorium `git init ~/demo`{{execute}}
+Task
+Use the command git revert HEAD...HEAD~2 to revert the commits between HEAD and HEAD~2.
+
+Protip
+You can use the command git log --oneline for a quick overview of the commit history.
+
+
