adding more scenarios

--- a/git-course/050.git-init.md
+++ b/git-course/050.git-init.md
@@ -41,3 +41,13 @@ Note, this will open an Vim editor session to create a commit message for each c
 
 Protip
 The motivation behind creating new commits is that re-writing history in Git is an anti-pattern. If you have pushed your commits then you should create new commits to undo the changes as other people might have made commits in the meantime.
+
+
+Git Revert
+To revert multiple commits at once we use the character ~ to mean minus. For example, HEAD~2 is two commits from the head. This can be combined with the characters ... to say between two commits.
+
+Task
+Use the command git revert HEAD...HEAD~2 to revert the commits between HEAD and HEAD~2.
+
+Protip
+You can use the command git log --oneline for a quick overview of the commit history.
