--- a/git-course/060.git-init.md
+++ b/git-course/060.git-init.md
@@ -1,10 +1,87 @@
-Git Revert
-To revert multiple commits at once we use the character ~ to mean minus. For example, HEAD~2 is two commits from the head. This can be combined with the characters ... to say between two commits.
+## Git Merge
+The git fetch command downloads changes into a separate branch which can be checked out and merge. During a merge Git will attempt to automatically combine the commits.
+
+When no conflicts exist then the merge will be 'fast-forwarded' and you won't have to do anything. If a conflict does exist then you will retrieve an error and the repository will be in a merging state.
 
 Task
-Use the command git revert HEAD...HEAD~2 to revert the commits between HEAD and HEAD~2.
+In your environment the changes from a remote repository has been fetched.
+
+You now need to merge the changes from origin/master.
+
+This will result in a merge conflict. The conflict indicates the merge failed because both repositories added the file. We'll resolve this in following next steps.
+
 
 Protip
-You can use the command git log --oneline for a quick overview of the commit history.
+By keeping commits small and focused you reduce the likelihood of a merge conflict.
+
+The command git pull is a combination of fetch and merge
+
+
+## Viewing Conflict
+
+When a conflict occurs the changes from both the local and remote will appear in the same file in the unix diff format. This is the same format used by git diff.
+
+To read the format, the local changes will appear at the top between <<<<<<< HEAD and ======= with the remote changes being underneath between ======= and >>>>>>> remotes/origin/master.
+
+To resolve the conflict the files need to be edited to match our desired end state. We'll demonstrate this in the next step.
+
+Protip
+Git supports different command line and visual merge tools to make resolving conflicts easier. The command git mergetool will launch an external tool, we're big fans of kdiff3.
+
+
+## Resolving Conflict
+
+The simplest way to fix a conflict is to pick either the local or remote version using git checkout --ours staging.txt or git checkout --theirs staging.txt. If you need to have more control then you can manually edit the file(s) like normal.
+
+Once the files are in the state desired, either manually or using git checkout, then you need stage and commit the changes. When committing a default commit message will be created with details of the merge and which files conflicted.
+
+Task
+Resolving the conflict by selecting the remote changes and complete the merge using git add followed by git commit.
+
+Protip
+If you want to revert in the middle of a merge and try again then use the command git reset --hard HEAD; to go back to your previous state.
+
+
+Use git commit --no-edit when you wish to use the default commit message.
+
+
+## Non-Fast Forward
+
+To simulate a non-fast forward merge the following has occurred.
+
+1) Developer A pulls the latest changes from Developer B.
+2) Developer B commits changes to their local repository.
+3) Developer A commits non-conflicting changes to their local repository.
+4) Developer A pulls the latest changes from Developer B.
+
+In this scenario Git is unable to fast-forward the changes from Developer B because Developer A has made a number of changes.
+
+When this happens, Git will attempt to auto-merge the changes. If no conflicts exist then the merge will be completed and a new commit will be created to indicate the merge happening at that point in time.
+
+The default commit message for merges is "Merge branch '' of ". These commits can be useful to indicate synchronisation points between repositories but also produce a noisy commit log. In the next step we'll investigate alternative approaches.
+
+
+Task
+Pull the changes from the remote repository and use the default commit message using the command below.
+
+`git pull --no-edit origin master` {{execute}}
+
+You can view the commits with `git log --all --decorate --oneline` {{execute}}
+
+
+Git Rebase
+The merge commit messages can be useful to indicate synchronisation points but they can also produce a lot of noise. For example if you're working against local branches and haven't pushed then this additional information is meaningless, and confusing, to other developers looking at the repository.
+
+To solve this you can use git rebase instead of git merge. A rebase will unwind the changes you've made and replay the changes in the branch, applying your changes as if they happened all on the same branch. The result is a clean history and graph for the merge.
+
+Important As rebase will replay the changes instead of merging, each commit will have a new hash id. If you, or other developers, have pushed/pulled the repository then changing the history can git to lose commits. As such you shouldn't rebase commits that have been made public, for example pushing commits then rebasing in older commits from a different branch. The result will be previously public commits having different hash ids. More details can be found at The Perils of Rebasing.
+
+
+## Rebasing Pull Requests
+This approach also applies when working with remote branches and can be applied when issuing a pull request using:
+
+`git pull --rebase` {{execute}}
+This will act as if you had done a pull request before each of your commits.
+
 
 
