--- a/git-course/070.git-init.md
+++ b/git-course/070.git-init.md
@@ -1,1 +1,41 @@
-Utwórz pierwsze puste repozytorium `git init ~/demo`{{execute}}
+## Git Branch
+
+Branches are created based on another branch, generally master. The command git branch <new branch name> <starting branch> takes an existing branch and creates a separate branch to work in. At this point both branches are identical.
+
+To switch to a branch you use the git checkout <new branch name> command.
+
+Task
+Create and checkout a new branch called 'new_branch'
+
+Protip
+The command `git checkout -b <new branch name>` will create and checkout the newly created branch.
+
+
+## List Branches
+
+To list all the branches use the command `git branch.` {{execute}}
+The additional argument -a will include remote branches while including -v will include the HEAD commit message for the branch
+
+Task
+List all the branches with their last commit message using `git branch -va` {{execute}}
+
+## Merge To Master
+
+A commit has been made to the new branch. To merge this into master you would first need to checkout the target branch, in this case master, and then use the 'git merge' command to merge in the commits from a branch.
+
+Task
+Merge the commits in your new branch back into master.
+
+
+## Push Branches
+
+As we've discussed in previous courses, if you want to push a branch to a remote then use the command git push <remote_name> <branch_name>
+
+
+## Clean Up Branches
+
+Cleaning up branches is important to remove the amount of noise and confusion. To delete a branch you need to provide the argument -d, for example git branch -d <branch_name>
+
+Task
+Now the branch has been merged into master it is no longer required. Delete your new branch to keep your repository clean and understandable.
+
