--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -23,6 +23,10 @@ Use the command `git add <file|directory>` to add hello-world.js to the staging 
 If you make an additional change after adding a file to the staging area then the change will not be reflected until you add the file again.
 
 
+`git add index.html` {{execute}}
+
+`git status`{{execute}}
+
 ## Git Commit
 
 Once a file has been added to the staging area it needs to be committed to the repository. The command git commit -m "commit message" moves files from staging to the repository and records the time/date, author and a commit message that can be used to add additional context and reasoning to the changes such as a bug report number.
