--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -25,7 +25,9 @@ If you make an additional change after adding a file to the staging area then th
 
 `git add index.html` {{execute}}
 
-`git status`{{execute}}
+Next
+
+`git status` {{execute}}
 
 ## Git Commit
 
@@ -35,6 +37,8 @@ Only changes added to the staging area will be committed, any files in the worki
 
 Task
 Use git commit -m "<commit message>" to commit the staged file.
+
+`git commit -m "adding index.html" ` {{execute}}
 
 Protip
 Each commit is assigned a SHA-1 hash which enables you to refer back to the commit in other commands.
