--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -10,6 +10,11 @@ The output of this command is called the "working tree status".
 Protip
 All files are "untracked" by Git until it's been told otherwise. The details of how is covered in the next step.
 
+Set your username: 
+`git config --global user.name "It's me" `{{execute}}
+Set your email address: `git config --global user.email "itsme@example.com"`{{execute}}
+
+
 ## Git add
 
 Step 3 - Git Add
@@ -23,11 +28,11 @@ Use the command `git add <file|directory>` to add hello-world.js to the staging 
 If you make an additional change after adding a file to the staging area then the change will not be reflected until you add the file again.
 
 
-`git add index.html` {{execute}}
+`git add index.html`{{execute}}
 
 Next
 
-`git status` {{execute}}
+`git status`{{execute}}
 
 ## Git Commit
 
