--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -43,7 +43,11 @@ Only changes added to the staging area will be committed, any files in the worki
 Task
 Use git commit -m "<commit message>" to commit the staged file.
 
-`git commit -m "adding index.html" ` {{execute}}
+`git commit -m "adding index.html" `{{execute}}
+
+`git status`{{execute}}
+
+
 
 Protip
 Each commit is assigned a SHA-1 hash which enables you to refer back to the commit in other commands.
@@ -56,6 +60,19 @@ Sometimes there are particular files or directories you never want to commit, su
 The .gitignore file allows you to define wildcards for the files you wish to ignore, for example *.tmp will ignore all files with the extension .tmp.
 
 Any files matching a defined wildcard will not be displayed in a git status output and be ignored when attempting the git add command.
+
+
+`touch .gitignore`{{execute}}
+
+`echo "*.tmp" >.gitignore`{{execute}}
+
+`git status `{{execute}}
+
+`git add .gitignore`{{execute}}
+
+`git status `{{execute}}
+
+`git comit -m "adding .gitignore" `{{execute}}
 
 Task
 Add and commit a .gitignore file to the repository to ignore all *.tmp files.
