--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -72,7 +72,9 @@ Any files matching a defined wildcard will not be displayed in a git status outp
 
 `git status `{{execute}}
 
-`git comit -m "adding .gitignore" `{{execute}}
+`git commit -m "adding .gitignore" `{{execute}}
+
+`git status `{{execute}}
 
 Task
 Add and commit a .gitignore file to the repository to ignore all *.tmp files.
