adding more content

--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -12,7 +12,9 @@ All files are "untracked" by Git until it's been told otherwise. The details of 
 
 Set your username: 
 `git config --global user.name "It's me" `{{execute}}
-Set your email address: `git config --global user.email "itsme@example.com"`{{execute}}
+
+Set your email address:
+`git config --global user.email "itsme@example.com"`{{execute}}
 
 
 ## Git add
