--- a/git-course/010.git-init.md
+++ b/git-course/010.git-init.md
@@ -1,2 +1,37 @@
 
+![](images/git.png)
+
+
 Utwórz pierwsze puste repozytorium `git init ~/demo`{{execute}}
+
+Rozbijmy to polecenia na kilka składowych:
+
+Utworzenie podkatalogu o nazwie demo
+`mkdir -p ~/demo`{{execute}}
+
+Zmiana katalogu bieżącego
+`cd ~/demo`{{execute}}
+
+Utworzenie pustego repozytorium
+`git init`{{execute}}
+
+
+Git posiada narzędzie zwane git config, które pozwala odczytać, bądź zmodyfikować zmienne, które kontrolują wszystkie aspekty działania i zachowania Git
+
+Twoja tożsamość
+
+Pierwszą rzeczą, którą powinieneś zrobić po instalacji Git jest ustawienie nazwy użytkownika i adresu e-mail. To ważne, gdyż każdy utworzony commit używa tych informacji i jest z nimi związany:
+
+`git config --global user.name "It's me"`{{}}
+
+`git config --global user.email itsme@example.com`{{execute}}
+
+Jeśli skorzystasz z opcji --global wystarczy, że taka konfiguracja zostanie dokonana jednorazowo. Git skorzysta z niej podczas każdej operacji wykonywanej przez Ciebie w danym systemie. Jeśli zaistnieje potrzeba zmiany tych informacji dla konkretnego projektu, można skorzystać z git config bez opcji --global.
+
+Wiele graficznych narzędzi pomoże Ci jeśli uruchomisz je po raz pierwszy.
+Edytor
+
+Teraz, gdy ustaliłeś swą tożsamość, możesz skonfigurować domyślny edytor tekstu, który zostanie uruchomiony, gdy Git będzie wymagał wprowadzenia jakiejś informacji tekstowej. Domyślnie Git skorzysta z domyślnego edytora systemowego, którym zazwyczaj jest Vi lub Vim. Jeśli wolisz korzystać z innego edytora, np. z nano, uruchom następujące polecenie:
+
+`git config --global core.editor nano`{{execute}}
+
