adding more content 2

--- a/git-course/010.git-init.md
+++ b/git-course/010.git-init.md
@@ -1,8 +1,12 @@
 
-![](images/git.png)
+![](./assets/git.png)
 
 
-Utwórz pierwsze puste repozytorium `git init ~/demo`{{execute}}
+Utwórz pierwsze puste repozytorium 
+
+Można to zrobić jednym poleceniem:
+
+`git init ~/demo`{{execute}}
 
 Rozbijmy to polecenia na kilka składowych:
 
@@ -22,7 +26,7 @@ Twoja tożsamość
 
 Pierwszą rzeczą, którą powinieneś zrobić po instalacji Git jest ustawienie nazwy użytkownika i adresu e-mail. To ważne, gdyż każdy utworzony commit używa tych informacji i jest z nimi związany:
 
-`git config --global user.name "It's me"`{{}}
+`git config --global user.name "It's me"`{{execute}}
 
 `git config --global user.email itsme@example.com`{{execute}}
 
