adding more content 3

--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -1,67 +1,86 @@
 ## Git status
 
-Step 2 - Git Status
-When a directory is part of a repository it is called a Working Directory. A working directory contains the latest downloaded version from the repository together with any changes that have yet to be committed. As you're working on a project, all changes are made in this working directory.
+Rejestrowanie zmian w repozytorium
 
-You can view which files have changed between your working directory and what's been previously committed to the repository using the command `git status`{{execute}}
+Posiadasz już repozytorium Gita i ostatnią wersję lub kopię roboczą wybranego projektu. Za każdym razem, kiedy po naniesieniu zmian projekt osiągnie stan, który chcesz zapamiętać, musisz nowe wersje plików zatwierdzić w swoim repozytorium.
 
-The output of this command is called the "working tree status".
+Pamiętaj, że każdy plik w twoim katalogu roboczym może być w jednym z dwóch stanów: śledzony lub nieśledzony. Śledzone pliki to te, które znalazły się w ostatniej migawce; mogą być niezmodyfikowane, zmodyfikowane lub oczekiwać w poczekalni. Nieśledzone pliki to cała reszta — są to jakiekolwiek pliki w twoim katalogu roboczym, które nie znalazły się w ostatniej migawce i nie znajdują się w poczekalni, gotowe do zatwierdzenia. Początkowo, kiedy klonujesz repozytorium, wszystkie twoje pliki będą śledzone i niezmodyfikowane, ponieważ dopiero co zostały wybrane i nie zmieniałeś jeszcze niczego.
 
-Protip
-All files are "untracked" by Git until it's been told otherwise. The details of how is covered in the next step.
+Kiedy zmieniasz pliki, Git rozpoznaje je jako zmodyfikowane, ponieważ różnią się od ostatniej zatwierdzonej zmiany. Zmodyfikowane pliki umieszczasz w poczekalni, a następnie zatwierdzasz oczekujące tam zmiany i tak powtarza się cały cykl.
 
-Set your username: 
-`git config --global user.name "It's me" `{{execute}}
 
-Set your email address:
-`git config --global user.email "itsme@example.com"`{{execute}}
+![](./assets/file-lifecycle.png)
+
+Sprawdzanie stanu twoich plików
+
+Podstawowe narzędzie używane do sprawdzenia stanu plików to polecenie git status. Jeśli uruchomisz je bezpośrednio po sklonowaniu repozytorium, zobaczysz wynik podobny do poniższego:
+
+`git status`{{execute}}
+
+Powiedzmy, że dodajesz do repozytorium nowy, prosty plik README. Jeżeli nie istniał on wcześniej, po uruchomieniu git status zobaczysz go jako plik nieśledzony, jak poniżej:
+
+Widać, że twój nowy plik index.html nie jest jeszcze śledzony, ponieważ znajduje się pod nagłówkiem „Untracked files” (Nieśledzone pliki) w informacji o stanie. Nieśledzony oznacza, że Git widzi plik, którego nie miałeś w poprzedniej migawce (zatwierdzonej kopii); Git nie zacznie umieszczać go w przyszłych migawkach, dopóki sam mu tego nie polecisz. Zachowuje się tak, by uchronić cię od przypadkowego umieszczenia w migawkach wyników działania programu lub innych plików, których nie miałeś zamiaru tam dodawać. W tym przypadku chcesz, aby README został uwzględniony, więc zacznijmy go śledzić.
 
 
 ## Git add
 
-Step 3 - Git Add
-To save, or commit, files into your Git repository you first need to add them to the staging area. Git has three areas, a working directory, a staging area and the repository itself. Users move, otherwise referred to as promote, changes from the working directory, to a staging area before committing them into the repository.
+Śledzenie nowych plików
 
-One of the key approaches with Git is that commits are focused, small and frequent. The staging area helps to maintain this workflow by allowing you to only promote certain files at a time instead of all the changes in your working directory.
-
-Task
-Use the command `git add <file|directory>` to add hello-world.js to the staging area.
-
-If you make an additional change after adding a file to the staging area then the change will not be reflected until you add the file again.
-
+Aby rozpocząć śledzenie nowego pliku, użyj polecenia git add. Aby zacząć śledzić plik index.html, możesz wykonać:
 
 `git add index.html`{{execute}}
 
-Next
+A następnie
 
 `git status`{{execute}}
 
+
+
 ## Git Commit
 
-Once a file has been added to the staging area it needs to be committed to the repository. The command git commit -m "commit message" moves files from staging to the repository and records the time/date, author and a commit message that can be used to add additional context and reasoning to the changes such as a bug report number.
+Przed pierwszym zatwierdzeniem zmiany należy pamietać o ustawieniu w konfigutacji
 
-Only changes added to the staging area will be committed, any files in the working directory that have not been staged will not be included.
 
-Task
-Use git commit -m "<commit message>" to commit the staged file.
+Nazwa użytkownika: 
+`git config --global user.name "It's me" `{{execute}}
+
+Adres email:
+`git config --global user.email "itsme@example.com"`{{execute}}
 
 `git commit -m "adding index.html" `{{execute}}
 
 `git status`{{execute}}
 
-
-
-Protip
-Each commit is assigned a SHA-1 hash which enables you to refer back to the commit in other commands.
+Widać, że jest w poczekalni, ponieważ znajduje się pod nagłówkiem „Changes to be commited“ (Zmiany do zatwierdzenia). Jeśli zatwierdzisz zmiany w tym momencie, jako migawka w historii zostanie zapisana wersja pliku z momentu wydania polecenia git add. Być może pamiętasz, że po uruchomieniu git init wydałeś polecenie git add (pliki) — miało to na celu rozpoczęcie ich śledzenia. Polecenie git add bierze jako parametr ścieżkę do pliku lub katalogu; jeśli jest to katalog, polecenie dodaje wszystkie pliki z tego katalogu i podkatalogów.
 
 
 ## Git Ignore
 
-Sometimes there are particular files or directories you never want to commit, such as local development configuration. To ignore these files you create a .gitignore file in the root of the repository.
+Ignorowanie plików
 
-The .gitignore file allows you to define wildcards for the files you wish to ignore, for example *.tmp will ignore all files with the extension .tmp.
+Często spotkasz się z klasą plików, w przypadku których nie chcesz, by Git automatycznie dodawał je do repozytorium, czy nawet pokazywał je jako nieśledzone. Są to ogólnie pliki generowane automatycznie, takie jak dzienniki zdarzeń, czy pliki tworzone w czasie budowania projektu. W takich wypadkach tworzysz plik zawierający listę wzorców do nich pasujących i nazywasz go .gitignore. Poniżej znajdziesz przykładowy plik .gitignore:
 
-Any files matching a defined wildcard will not be displayed in a git status output and be ignored when attempting the git add command.
+$ cat .gitignore
+*.[oa]
+*~
+
+Pierwsza linia mówi Gitowi, by ignorował pliki kończące się na .o lub .a — pliki obiektów i archiwa, które mogą być produktem kompilacji kodu. Druga linia mówi Gitowi, żeby pomijał również wszystkie pliki, które nazwy kończą się tyldą (~), której to używa wiele edytorów tekstu, takich jak Emacs, do oznaczania plików tymczasowych. Możesz też dołączyć katalog log, tmp lub pid, automatycznie wygenerowaną dokumentację itp. Zajęcie się plikiem .gitignore jeszcze przed przystąpieniem do pracy jest zwykle dobrym pomysłem i pozwoli ci uniknąć przypadkowego dodania do repozytorium Git niechcianych plików.
+
+Zasady przetwarzania wyrażeń, które możesz umieścić w pliku .gitignore są następujące:
+
+    Puste linie lub linie rozpoczynające się od # są ignorowane.
+
+    Działają standardowe wyrażenia glob.
+
+    Możesz zakończyć wyrażenie znakiem ukośnika (/) aby sprecyzować, że chodzi o katalog.
+
+    Możesz negować wyrażenia rozpoczynając je wykrzyknikiem (!).
+
+Wyrażenia glob są jak uproszczone wyrażenia regularne, używane przez powłokę. Gwiazdka (*) dopasowuje zero lub więcej znaków; [abc] dopasowuje dowolny znak znajdujący się wewnątrz nawiasu kwadratowego (w tym przypadku a, b lub c); znak zapytania (?) dopasowuje pojedynczy znak; nawias kwadratowy zawierający znaki rozdzielone myślnikiem ([0-9]) dopasowuje dowolny znajdujący się pomiędzy nimi znak (w tym przypadku od 0 do 9).
+
+Możesz użyć dwóch gwiazdek aby dopasować katalogi zagnieżdżone; a/**/z would match a/z, a/b/z, a/b/c/z i tak dalej.
+
+Przykład uzupełnienia pliku .gitignore o pliki  o nazwie *.tmp
 
 
 `touch .gitignore`{{execute}}
