--- a/git-course/030.git-init.md
+++ b/git-course/030.git-init.md
@@ -20,6 +20,12 @@ As in the previous scenario in order to commit a change it must first be staged 
 Task
 To proceed first stage your changes using git add
 
+`git add .`{{execute}}
+
+Next
+
+`git status`{{execute}} 
+
 Protip
 If you rename or delete files then you need to specify these files in the add command for them to be tracked. Alternatives you can use git mv and git rm for git to perform the action and include update the staging area.
 
@@ -27,7 +33,8 @@ If you rename or delete files then you need to specify these files in the add co
 ## Staged Differences
 Once the changes are in the staging area they will not show in the output from git diff. By default, git diff will only compare the working directory and not the staging area.
 
-To compare the changes in the staging area against the previous commit you provide the staged parameter git diff --staged. This enables you to ensure that you have correctly staged all your changes
+To compare the changes in the staging area against the previous commit you provide the staged parameter 
+`git diff --staged`{{execute}}. This enables you to ensure that you have correctly staged all your changes
 
 
 
@@ -37,10 +44,13 @@ The command git log allows you to view the history of the repository and the com
 
 Protip
 The format of the log output is very flexible. For example to output each commit on a single line the command is 
-git log --pretty=format:"%h %an %ar - %s". More details can be found in the git log man page accessed using git log --help
+`git log --pretty=format:"%h %an %ar - %s"`{{execute}}. More details can be found in the git log man page accessed using 
+
+`git log --help`{{execute}}
 
 
 Git Show
-While git log tells you the commit author and message, to view the changes made in the commit you need to use the the command git show
+While git log tells you the commit author and message, to view the changes made in the commit you need to use the the command 
+`git show`{{execute}}
 
 Like with other commands, by default it will show the changes in the HEAD commit. Use git show <commit-hash> to view older changes.
